# otus-cpp-ci-cd

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  conanfile.py  format.sh  static-analysis.sh  version.h.in
.github/workflows/: cmake.yml  conan.yaml  linux.yaml  release.yaml  upload.yml
lib/: BUILD  CMakeLists.txt  hello.cpp  hello.h
main/: BUILD  CMakeLists.txt  main.cpp
src/: BUILD  CMakeLists.txt  hello.cpp  hello.h  main.cpp
test_package/: CMakeLists.txt  conanfile.py  example.cpp
tests/: CMakeLists.txt  test_hello.cpp
